| Summary: | ASTERISK-25070: Fix FTBFS on Hurd | ||
| Reporter: | Gabriele Giacone (gg0) | Labels: | |
| Date Opened: | 2015-05-07 04:55:30 | Date Closed: | 2016-11-01 21:15:33 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Debian sid hurd-i386 | Attachments: | |
| Description: | Patch in URL field fixes asterisk build on Hurd.
Not signed CLA because tiny patch, not legally significant. Thanks for considering \[EDIT\]: Removed linked to external patch. Patches must either be attached to the issue, or preferably, submitted to Gerrit [https://gerrit.asterisk.org]. - mjordan | ||
| Comments: | By: Tzafrir Cohen (tzafrir) 2015-05-07 05:14:50.119-0500 Patch is simple: * PATH_MAX is not defined. Define it (probably in a better place). * consider GNU/HURD in some places where other GNU systems (Linux, kFreeBSD) were already considered. I can rewrite it if needed. By: Matt Jordan (mjordan) 2015-05-07 06:33:08.091-0500 We cannot accept patches without a signed CLA. If someone would like to provide it using the project's process, that'd be fine. See [https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Gabriele Giacone (gg0) 2015-05-07 07:14:03.189-0500 As far as I know so tiny changes are not legally significant https://www.gnu.org/prep/maintain/maintain.html#Legally-Significant Anyway I would prefer not to sign any CLA, even because I don't plan to contribute further and won't bother at all if anyone else takes authorship of patch in question. Tzafrir, have you already signed it? Willing to do it? Thanks for your time By: Tzafrir Cohen (tzafrir) 2015-05-07 09:21:41.872-0500 Yes, I signed it. By: Rusty Newton (rnewton) 2015-05-07 18:46:37.270-0500 Whoever is submitting this needs to attach it to the issue under CLA or submit it to Gerrit. By: Rusty Newton (rnewton) 2015-06-01 17:54:55.443-0500 Suspended due to lack of activity. Please request a bug marshal in #asterisk-bugs on the IRC network irc.freenode.net to reopen the issue should you have the additional information requested. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Tzafrir Cohen (tzafrir) 2016-03-30 07:53:46.515-0500 I'll note that the patch includes two separate parts: 1. setting PATH_MAX to 4096 explicitly if it is not already defined (which practically means that it is the HURD). 2. Fixing Makefile and main/netsock.c to build properly on the HURD. (2) is trivial (there's basically one way to do it), and I'll re-submit it myself. Likewise (1) seems trivial. The only issue it raises is: what happens if then on a HURD system the system hands asterisk a path longer than 4096 bytes? Well, you can easily do that on Linux (PATH_MAX is practically an arbitrary size and not an actual limitation. The kernel is not bound by it . Bash, for instance, ignores it). I did some very initial tests and was not able to crash Asterisk in any way. So I'd say it's safe. Is it OK to submit reviews for both issues? By: Tzafrir Cohen (tzafrir) 2016-11-01 03:58:10.027-0500 Note: for the record, (2) was already resolved. By: Friendly Automation (friendly-automation) 2016-11-01 04:06:31.976-0500 Change 4254 had a related patch set uploaded by Tzafrir Cohen: define PATH_MAX for HURD [https://gerrit.asterisk.org/4254|https://gerrit.asterisk.org/4254] By: Friendly Automation (friendly-automation) 2016-11-01 04:21:47.972-0500 Change 4255 had a related patch set uploaded by Tzafrir Cohen: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4255|https://gerrit.asterisk.org/4255] By: Friendly Automation (friendly-automation) 2016-11-01 04:48:57.650-0500 Change 4255 had a related patch set uploaded by Tzafrir Cohen: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4255|https://gerrit.asterisk.org/4255] By: Friendly Automation (friendly-automation) 2016-11-01 12:23:16.577-0500 Change 4262 had a related patch set uploaded by George Joseph: define PATH_MAX for HURD [https://gerrit.asterisk.org/4262|https://gerrit.asterisk.org/4262] By: Friendly Automation (friendly-automation) 2016-11-01 12:23:29.279-0500 Change 4263 had a related patch set uploaded by George Joseph: define PATH_MAX for HURD [https://gerrit.asterisk.org/4263|https://gerrit.asterisk.org/4263] By: Friendly Automation (friendly-automation) 2016-11-01 12:29:08.338-0500 Change 4264 had a related patch set uploaded by George Joseph: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4264|https://gerrit.asterisk.org/4264] By: Friendly Automation (friendly-automation) 2016-11-01 12:32:37.752-0500 Change 4264 had a related patch set uploaded by George Joseph: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4264|https://gerrit.asterisk.org/4264] By: Friendly Automation (friendly-automation) 2016-11-01 12:32:52.442-0500 Change 4265 had a related patch set uploaded by George Joseph: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4265|https://gerrit.asterisk.org/4265] By: Friendly Automation (friendly-automation) 2016-11-01 12:37:54.079-0500 Change 4264 had a related patch set uploaded by Richard Mudgett: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4264|https://gerrit.asterisk.org/4264] By: Friendly Automation (friendly-automation) 2016-11-01 12:38:23.208-0500 Change 4265 had a related patch set uploaded by Richard Mudgett: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4265|https://gerrit.asterisk.org/4265] By: Friendly Automation (friendly-automation) 2016-11-01 21:15:34.058-0500 Change 4265 merged by zuul: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4265|https://gerrit.asterisk.org/4265] By: Friendly Automation (friendly-automation) 2016-11-01 22:31:05.905-0500 Change 4262 merged by zuul: define PATH_MAX for HURD [https://gerrit.asterisk.org/4262|https://gerrit.asterisk.org/4262] By: Friendly Automation (friendly-automation) 2016-11-02 05:24:44.894-0500 Change 4255 merged by Joshua Colp: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4255|https://gerrit.asterisk.org/4255] By: Friendly Automation (friendly-automation) 2016-11-02 05:26:17.274-0500 Change 4264 merged by Joshua Colp: netsock.c: fix includes for HURD [https://gerrit.asterisk.org/4264|https://gerrit.asterisk.org/4264] By: Friendly Automation (friendly-automation) 2016-11-02 05:26:38.542-0500 Change 4254 merged by Joshua Colp: define PATH_MAX for HURD [https://gerrit.asterisk.org/4254|https://gerrit.asterisk.org/4254] By: Friendly Automation (friendly-automation) 2016-11-02 05:27:33.125-0500 Change 4263 merged by Joshua Colp: define PATH_MAX for HURD [https://gerrit.asterisk.org/4263|https://gerrit.asterisk.org/4263] | ||